# bl1

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  devbox.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
configs/: wagenaar_burst.yaml
docs/: index.rst  quickstart.rst
notebooks/: 03_criticality_sweep.ipynb  04_dandi_to_simulation.ipynb
rust/: Cargo.toml
rust/crates/bl1-analysis/: Cargo.toml
rust/crates/bl1-analysis/src/: bursts.rs  criticality.rs  lib.rs
rust/crates/bl1-core/: Cargo.toml
rust/crates/bl1-core/src/: integrator.rs  lib.rs  neuron.rs  plasticity.rs  populations.rs  sparse.rs  synapse.rs
rust/crates/bl1-games/: Cargo.toml
rust/crates/bl1-games/src/: agent.rs  closed_loop.rs  decoding.rs  doom.rs  encoding.rs  env.rs  feedback.rs  learner.rs  lib.rs  plasticity.rs  pong.rs  pursuit.rs  remote_brain.rs  reservoir.rs  substrate.rs  trainer.rs
rust/crates/bl1-mea/: Cargo.toml
rust/crates/bl1-mea/src/: lib.rs
rust/crates/bl1-sim/: Cargo.toml
rust/crates/bl1-sim/src/: config.rs  connectivity.rs  culture.rs  lib.rs  placement.rs
rust/crates/bl1-tui/: Cargo.toml
rust/crates/bl1-tui/src/: app.rs  main.rs  ui.rs
scripts/: autoresearch_fr_sweep.py  doom_compare.py  slurm_train_burst.sh  slurm_train_hifi.sh  slurm_train_sharf.sh  slurm_visualize.sh  train_converge.py  train_culture.py  train_pooled.py  tune_bursting.py  verify_params.py  visualize_spikes.py  vizdoom_bridge.py
src/bl1/compat/: action_protocol.py  cl_sdk.py  stats_protocol.py  udp_bridge.py
src/bl1/core/: adex.py  hybrid.py  izhikevich.py  jaxley_adapter.py  pallas_ops.py
src/bl1/loop/: controller.py
src/bl1/monitor/: __init__.py  activity.py  animation.py  logger.py  mjpeg.py  style.py
src/bl1/network/: types.py
src/bl1/training/: sharding.py  trainer.py
src/bl1/validation/: comparison.py
tests/: test_burst_training.py  test_integration.py  test_integrator_surrogate.py  test_network_coverage.py  test_sensitivity.py  test_sharding.py  test_stdp.py  test_surrogate.py  test_training.py
