[package]
name = "bl1-sim"
description = "Culture construction: neuron placement, distance-dependent connectivity, and YAML configs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bl1-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rand.workspace = true
rand_pcg.workspace = true
