[package]
name = "bl1-tui"
description = "lazygit-style terminal UI to configure, run, and inspect BL-1 culture simulations."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bl1"
path = "src/main.rs"

[dependencies]
bl1-core.workspace = true
bl1-analysis.workspace = true
bl1-mea.workspace = true
bl1-sim.workspace = true
bl1-games.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
